# remote-mcp-azure-function

./: README.md  azure.yaml  function_app.py  pyproject.toml  schema.py  tools.py
agent/: agent.ipynb  agent.py  sample.env
docs/: az-func-mcp.drawio
infra/: main.bicep  main.parameters.json
src/: .funcignore  function_app.py  requirements.txt  schema.py  tools.py
